2000-11-26  David Welch  <david.welch@seh.ox.ac.uk>

	* i386/Makefrag (i386-installed-headers): Removed dead files 
	from the list of headers to be installed

2000-11-26  Marcus Brinkmann  <marcus@gnu.org>

	* linux/src/drivers/net/tulip.c: Updated to version
	from Linux 2.2.17 (I am amazed that 2.2.x drivers work).
	Suggested by Jason Henry Parker <jasonp@uq.net.au>.

2000-10-29  Roland McGrath  <roland@frob.com>

	Remove numerous dead header files.
	Suggested by Igor Khavkine <i_khavki@alcor.concordia.ca>.
	* i386/include/mach/i386/bios.h: Dead file removed.
	* i386/include/mach/i386/code16.h: Dead file removed.
	* i386/include/mach/i386/debug_reg.h: Dead file removed.
	* i386/include/mach/i386/dpmi.h: Dead file removed.
	* i386/include/mach/i386/far_ptr.h: Dead file removed.
	* i386/include/mach/i386/paging.h: Dead file removed.
	* i386/include/mach/i386/pio.h: Dead file removed.
	* i386/include/mach/i386/pmode.h: Dead file removed.
	* i386/include/mach/i386/proc_reg.h: Dead file removed.
	* i386/include/mach/i386/seg.h: Dead file removed.
	* i386/include/mach/i386/time_stamp.h: Dead file removed.
	* i386/include/mach/i386/tss.h: Dead file removed.
	* i386/include/mach/i386/vcpi.h: Dead file removed.
	* i386/include/mach/proc_ops.h: Dead file removed.
	* i386/include/mach/sa/sys/varargs.h: Dead file removed.
	* i386/include/mach/setjmp.h: Dead file removed.
	* include/mach/proc_ops.h: Dead file removed.
	* Makefile.in (mach-headers): Remove proc_ops.h.
	* i386/Makefrag (i386-installed-headers): Likewise.
	(installed-headers): Don't touch this any more.
	* i386/Files: Update for removed files.

2000-09-29  Marcus Brinkmann  <marcus@gnu.org>

	* i386/i386at/conf.c (dev_name_list): Don't use MACH_COM to check
	if com support is enabled, but NCOM, as it used to be.

2000-09-24  OKUJI Yoshinori  <okuji@gnu.org>

	* linux/dev/glue/block.c: Reverted the changes at 2000-08-17.
	Reported by Brent Fulgham <brent.fulgham@xpsystems.com>.
